crates/apollo-compiler/test_data/diagnostics/0033_object_type_definition_with_duplicate_fields.txt
Error: fields must be unique in a definition
   ╭─[0033_object_type_definition_with_duplicate_fields.graphql:2:3]
   │
 2 │   name: String
   │   ──────┬─────  
   │         ╰─────── previous definition of `name` here
 3 │   name: String
   │   ──────┬─────  
   │         ╰─────── `name` redefined here
   │ 
   │ Help: `name` field must only be defined once in this input object definition.
───╯

